syntax = "proto3";

package astria.sequencerblock.v1alpha1;

import "astria/primitive/v1/types.proto";
import "astria/sequencerblock/v1alpha1/block.proto";
import "astria_vendored_sequencerblock/tendermint/abci/types.proto";
import "astria_vendored_sequencerblock/tendermint/types/types.proto";
import "astria_vendored_sequencerblock/tendermint/types/validator.proto";
import "google/api/annotations.proto";
import "google/api/field_behavior.proto";

message GetSequencerBlockRequest {
  // The height of the block to retrieve.
  uint64 height = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetFilteredSequencerBlockRequest {
  // The height of the block to retrieve.
  uint64 height = 1 [(google.api.field_behavior) = REQUIRED];
  // The 32 bytes identifying a rollup. Usually the sha256 hash of a plain rollup name.
  repeated astria.primitive.v1.RollupId rollup_ids = 2 [(google.api.field_behavior) = REQUIRED];
}

message GetChainIdRequest {}

message ChainId {
  // The chain id of the sequencer.
  string inner = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetCommitRequest {
  // The height of the commit to retrieve.
  uint64 height = 1 [(google.api.field_behavior) = REQUIRED];
}

message Commit {
  astria_vendored.tendermint.types.SignedHeader signed_header = 1 [(google.api.field_behavior) = REQUIRED];
  bool canonical = 2 [(google.api.field_behavior) = REQUIRED];
}

message GetValidatorsRequest {
  // The height of the validators to retrieve.
  uint64 height = 1 [(google.api.field_behavior) = REQUIRED];
}

message Validators {
  uint64 height = 1 [(google.api.field_behavior) = REQUIRED];
  repeated astria_vendored.tendermint.types.Validator validators = 2 [(google.api.field_behavior) = REQUIRED];
  int32 total = 3 [(google.api.field_behavior) = REQUIRED];
}

message GetAbciInfoRequest {}

message GetPendingNonceRequest {
  // The account to retrieve the pending nonce for.
  astria.primitive.v1.Address address = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetPendingNonceResponse {
  // The pending nonce for the given account.
  uint32 inner = 1;
}

service SequencerService {
  // Given a block height, returns the sequencer block at that height.
  rpc GetSequencerBlock(GetSequencerBlockRequest) returns (SequencerBlock) {
    option (google.api.http) = {get: "/v1alpha1/sequencer/{height}"};
  }

  // Given a block height and set of rollup ids, returns a SequencerBlock which
  // is filtered to contain only the transactions that are relevant to the given rollup.
  rpc GetFilteredSequencerBlock(GetFilteredSequencerBlockRequest) returns (FilteredSequencerBlock) {
    option (google.api.http) = {
      post: "/v1alpha1/sequencer/{height}:filtered"
      body: "*"
    };
  }

  rpc GetChainId(GetChainIdRequest) returns (ChainId) {
    option (google.api.http) = {get: "/v1alpha1/sequencer/chain_id"};
  }

  rpc GetCommit(GetCommitRequest) returns (Commit) {
    option (google.api.http) = {get: "/v1alpha1/sequencer/commit/{height}"};
  }

  rpc GetValidators(GetValidatorsRequest) returns (Validators) {
    option (google.api.http) = {get: "/v1alpha1/sequencer/validators/{height}"};
  }

  rpc GetAbciInfo(GetAbciInfoRequest) returns (astria_vendored.tendermint.abci.ResponseInfo) {
    option (google.api.http) = {get: "/v1alpha1/sequencer/abci_info"};
  }
  
  // Returns the pending nonce for the given account.
  rpc GetPendingNonce(GetPendingNonceRequest) returns (GetPendingNonceResponse) {
    option (google.api.http) = {get: "/v1alpha1/sequencer/pendingnonce/{account}"};
  }
}
